k8s/manifests-8c4b4f/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-8c4b4f
  namespace: journee
  labels:
    app: journee-8c4b4f
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-8c4b4f
  template:
    metadata:
      labels:
        app: journee-8c4b4f
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-8c4b4f
          image: gcr.io/my-docker-471807/journee:8c4b4f-080e99
          ports:
            - containerPort: 3000
