k8s/manifests-8c4b4f/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-8c4b4f
  namespace: journee
spec:
  selector:
    app: journee-8c4b4f
  ports:
    - port: 80
      targetPort: 3000
